# uniform-array-derive

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/example/: Cargo.toml
crates/example/src/: lib.rs
crates/uniform-array-derive/: Cargo.toml
crates/uniform-array-derive/src/: lib.rs
