[package]
name = "example"
publish = false
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[dependencies]
uniform-array-derive = { path = "../uniform-array-derive" }
