[package]
name = "uniform-array-derive"
description.workspace = true
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
syn = "2.0.68"
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20.9"
ensure-uniform-type = "0.1.1"

[lib]
proc-macro = true
